[gd_scene load_steps=16 format=3 uid="uid://tc0fxfstldtg"]

[ext_resource type="Script" path="res://player/player_character.gd" id="1_40f8e"]
[ext_resource type="PackedScene" uid="uid://tylw3kqqll7j" path="res://player/sofa.tscn" id="1_bnwni"]
[ext_resource type="Script" path="res://player/player_collision.gd" id="2_nyv0g"]
[ext_resource type="PackedScene" uid="uid://ci77h1vtko0cj" path="res://player/wizard.tscn" id="2_pcxq3"]
[ext_resource type="Script" path="res://player/mouse_control.gd" id="4_40f8e"]
[ext_resource type="Script" path="res://player/player_life_bar.gd" id="5_0yu2b"]
[ext_resource type="Script" path="res://player/progress_bar.gd" id="6_qkhfv"]
[ext_resource type="AudioStream" uid="uid://dikcgufap1qsx" path="res://sounds/wind.mp3" id="8_qkhfv"]
[ext_resource type="AudioStream" uid="uid://biqs1rjuetxbd" path="res://sounds/blaster.mp3" id="9_t4ikk"]
[ext_resource type="AudioStream" uid="uid://ca6f0x6ww3vof" path="res://music/Lighting Speed.mp3" id="10_r7u25"]

[sub_resource type="SphereShape3D" id="SphereShape3D_40f8e"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bnwni"]

[sub_resource type="Theme" id="Theme_qkhfv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4ikk"]
bg_color = Color(0.823529, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7u25"]
bg_color = Color(0, 1, 0, 1)

[node name="PlayerCharacter" type="CharacterBody3D"]
motion_mode = 1
script = ExtResource("1_40f8e")
metadata/Type = "Player"

[node name="player_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1.23762, 0, 0, 0, 1.23762, 0, 0, 0, 1.23762, 0, 0, 0)
shape = SubResource("SphereShape3D_40f8e")
script = ExtResource("2_nyv0g")

[node name="sofa2" parent="." instance=ExtResource("1_bnwni")]

[node name="wizard" parent="sofa2" instance=ExtResource("2_pcxq3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.298412, 0.264699)

[node name="Camera3D" type="Camera3D" parent="sofa2"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.5, 0.5, -0.5)
fov = 90.0

[node name="lock_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="lock_volume" type="CollisionShape3D" parent="lock_area"]
transform = Transform3D(1000, 0, 0, 0, -4.37114e-05, 1000, 0, -1000, -4.37114e-05, 0, 0, 1000)
shape = SubResource("CylinderShape3D_bnwni")
script = ExtResource("2_nyv0g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 324.0
offset_right = 576.0
offset_bottom = 351.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_40f8e")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 64.0
offset_top = 576.0
offset_right = 192.0
offset_bottom = 608.0
theme = SubResource("Theme_qkhfv")
theme_override_styles/background = SubResource("StyleBoxFlat_t4ikk")
theme_override_styles/fill = SubResource("StyleBoxFlat_r7u25")
show_percentage = false
script = ExtResource("6_qkhfv")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 64.0
offset_top = 547.0
offset_right = 104.0
offset_bottom = 570.0

[node name="score_label" type="Label" parent="CanvasLayer"]
offset_left = 63.0
offset_top = 502.0
offset_right = 103.0
offset_bottom = 525.0

[node name="background_fade" type="ColorRect" parent="CanvasLayer"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.169245, 0.169245, 0.169245, 0.901961)

[node name="game_over" type="Label" parent="CanvasLayer/background_fade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -12.0
offset_right = 46.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.252, 2)
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="playerLifeBar" type="Node" parent="."]
script = ExtResource("5_0yu2b")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_qkhfv")

[node name="player_marker" type="Node" parent="."]
unique_name_in_owner = true

[node name="fire_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_t4ikk")
volume_db = -15.0

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.154974, 0.359457, 1)
spring_length = 100.0

[node name="Node3D" type="Node3D" parent="SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100)

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_r7u25")
autoplay = true
parameters/looping = true

[connection signal="player_crashed" from="." to="CanvasLayer/Control" method="_on_player_character_player_crashed"]
[connection signal="player_crashed" from="." to="CanvasLayer/ProgressBar" method="_on_player_character_player_crashed"]
[connection signal="analog_input" from="CanvasLayer/Control" to="." method="_on_control_analog_input"]
[connection signal="fire_action" from="CanvasLayer/Control" to="." method="_on_control_fire_action"]
[connection signal="player_dead" from="playerLifeBar" to="." method="_on_player_life_bar_player_dead"]
[connection signal="player_dead" from="playerLifeBar" to="CanvasLayer/Control" method="_on_player_life_bar_player_dead"]
